# eink-screen-esp32

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
.gitsecret/keys/: pubring.kbx  pubring.kbx~  trustdb.gpg
.gitsecret/paths/: mapping.cfg
backend/: .env.sample  .gitignore  Caddyfile  Dockerfile  README.md  biome.json  devenv.nix  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js
backend/server/: bus.py  db.py  eink.py  inaturalist.py  nea.py  render.py  rss.py  server.py  utils.py
backend/server/components/: ActionButtons.jinja  BusIcon.jinja  Canvas.jinja  Header.jinja  Link.jinja  PrimaryButton.jinja  SecondaryButton.jinja
backend/server/screens/: BaseScreen.jinja  DashboardModeScreen.jinja  DashboardScreen.jinja  HeadlinesInputScreen.jinja  HomeDashboardScreen.jinja  HomeScreen.jinja  ImageInputScreen.jinja  NewsDashboardScreen.jinja  TextInputScreen.jinja  iNaturalistDashboard.jinja
backend/server/styles/: main.css
backend/server/templates/: base.html  base.jinja  canvas.jinja  components.jinja  header.html  index.html  index.jinja  text_input.jinja
frontend/: .eslintrc.js  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/: app.tsx  types.d.ts
frontend/src/components/: Container.tsx  Header.tsx  ImageOptions.tsx  PrimaryButton.tsx  SelectInput.tsx
frontend/src/hooks/: useStore.ts
frontend/src/pages/: home.tsx  image.tsx  text.tsx
frontend/src/utils/: Api.ts  Options.tsx  Storage.ts  Utils.ts
mcu/: .gitignore  README.md  mypy.ini  pyproject.toml
mcu/archive/: dns.py  storage.py
mcu/archive/assets/fonts/: fira_sans_bold_32.py  fira_sans_regular_24.py
mcu/scripts/: flash_micropython.sh  flash_src.rshell  flash_src.sh  flash_src_full.sh  font_to_py.py  list_ports.sh
mcu/src/: main.py
mcu/src/lib/: api.py  api_server.py  app.py  data.py  display.py  epaper7in5b_V2.py  secrets.example.py  secrets.py.secret  secrets.sample.py  server.py  wifi.py  wifi_server.py
scripts/: flash_micropython.sh  flash_src.rshell  flash_src.sh  font_to_py.py
src/: constants.py  display.py  main.py
src/lib/: bt.py  constants.py  display.py  epaper7in5_V2.py  epaper7in5b_V2.py  secrets.example.py  secrets.py.secret  server.py  wifi.py
