[tool.poetry]
name = "backend"
version = "0.0.1"
description = ""
authors = ["Huey Lee <hello@huey.xyz>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
flask-htmx = "^0.4.0"
flask-assets = "^2.1.0"
jinjax = "^0.48"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
mypy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
