[tool.poetry]
name = "backend"
version = "0.0.1"
description = ""
authors = ["Huey Lee <hello@huey.xyz>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = {extras = ["async"], version = "^3.1.0"}
flask-htmx = "^0.4.0"
flask-assets = "^2.1.0"
jinjax = "^0.48"
apscheduler = "^3.11.0"
flask-apscheduler = "^1.13.1"
gunicorn = "^23.0.0"
pillow = "^11.1.0"
requests = "^2.32.3"
feedparser = "^6.0.11"
aiohttp = "^3.11.12"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
mypy = "^1.14.1"
types-requests = "^2.32.0.20241016"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
