[tool.poetry]
name = "eink-screen"
version = "0.1.0"
description = ""
authors = ["Huey <hello@huey.xyz>"]
license = "EUPL-1.2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
freetype-py = "^2.3.0"


[tool.poetry.group.dev.dependencies]
mpremote = "^1.20.0"
mypy = "^1.2.0"
black = "^23.3.0"
esptool = "^4.5.1"
rshell = "^0.0.31"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
