[tool.poetry]
name = "eink-screen"
version = "0.1.0"
description = ""
authors = ["Huey <hello@huey.xyz>"]
license = "EUPL-1.2"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
freetype-py = "^2.5.1"


[tool.poetry.group.dev.dependencies]
mpremote = "^1.24.1"
mypy = "^1.14.1"
black = "^24.10.0"
rshell = "^0.0.36"
mpflash = "^1.24.5"
pyudev = "^0.24.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
